pfmbackend.yaml
apiVersion: v1
kind: Service
metadata:
  name: pfmbackend
spec:
  selector:
    app: pfmbackend
    #tier: backend
  ports:
  - protocol: TCP
    port: 4000
    targetPort: 4000
---
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: pfmbackend-deployment
spec:
  selector:
    matchLabels:
      app: pfmbackend
  replicas: 2 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app: pfmbackend
    spec:
      containers:
      - name: pfmbackend
        image: hub.suh.com/pfm/pfmbackend:0.1
        ports:
        - containerPort: 4000
      #imagePullSecrets:
      #- name: pfmsecret
