pfmfrontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: pfmfrontend
spec:
  selector:
    app: pfmfrontend
    #tier: backend
  type: NodePort
  ports:
  - name: http
#  - protocol: TCP
    port: 8080
    targetPort: 8080
---
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: pfmfrontend-deployment
spec:
  selector:
    matchLabels:
      app: pfmfrontend
  replicas: 2 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app: pfmfrontend
    spec:
      containers:
      - name: pfmfrontend
        image: hub.suh.com/pfm/pfmfrontend:0.1
        ports:
        - containerPort: 8080
